# MyPolynom

./: .gitignore  CMakeLists.txt  Polynomial.cpp  Polynomial.h  main.cpp  myPolyParserGrammar.interp  myPolyParserGrammarBaseVisitor.cpp  myPolyParserGrammarBaseVisitor.h  myPolyParserGrammarLexer.cpp  myPolyParserGrammarLexer.h  myPolyParserGrammarLexer.interp  myPolyParserGrammarLexer.tokens  myPolyParserGrammarParser.cpp  myPolyParserGrammarParser.h  myPolyParserGrammarVisitor.cpp  myPolyParserGrammarVisitor.h  myTests.h  myVisitor.h  parser-daniil-akhmetov.sln  parser-daniil-akhmetov.vcxproj  parser-daniil-akhmetov.vcxproj.filters
frontend/: index.html
frontend/src/: App.vue
frontend/src/components/: AstNode.vue
